@@ -21,3 +21,4 @@ TPL_HATHOR_SUB_MENU="Sub Menu"
 TPL_HATHOR_XML_DESCRIPTION="Hathor is an accessible administrator template for Joomla! 1.6. The High Contrast CSS file can also be used for custom color branding."
 TPL_HATHOR_GO="Go"
 TPL_HATHOR_COM_MODULES_CUSTOM_POSITION_LABEL="Select"
+TPL_HATHOR_CPANEL_LINK_TEXT="Return to Control Panel"
