@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 11-Jun-2010 Jean-Marie Simonet
 # [#20489] JTableAsset::store failed. Thanks Christophe.
+# [#20962] [files and patch] Hathor error page. Thanks Andrea.
 
 10-Jun-2010 Christophe Demko
  # Fixed issue [#20952] Joomla does not load template language file when an error is detected
